--- a/index.html
+++ b/index.html
@@ -3,9 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+    <script type="module" src="main.js"></script>
     <title>LightOnGame</title>
 </head>
 <body>
     <header>Light On Game</header>
+    <div class="tartalom"></div>
+
+    <article>
+        <div class="jatekter"></div>
+    </article>
+    <aside>
+        <div class="info">
+
+        </div>
+    </aside>
 </body>
 </html>
