--- a/index.html
+++ b/index.html
@@ -8,16 +8,22 @@
     <title>LightOnGame</title>
 </head>
 <body>
-    <header>Light On Game</header>
-    <div class="tartalom"></div>
+    <main>
+        <header>Light On Game</header>
+        <div class="tartalom"></div>
 
-    <article>
-        <div class="jatekter"></div>
-    </article>
-    <aside>
-        <div class="info">
+        <article>
+            <div class="jatekter"></div>
+            <button id="gomb">Új játék</button>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur mollitia enim reprehenderit maxime similique natus facere! Recusandae libero voluptas ea hic accusantium! Quae laborum corporis deserunt, fugiat incidunt temporibus suscipit.</p>
+        </article>
+        
+        <aside>
+            <div class="info">
 
-        </div>
-    </aside>
+            </div>
+        </aside>
+        <footer>Készítette: Polgár Botond, Medgyaszay Gergő</footer>
+    </main>
 </body>
 </html>
