--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>Light On Game</header>
-    <div class="tartalom"></div>
+    <div class="lampa"></div>
 
     <article>
         <div class="jatekter"></div>
