--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 <body>
     <main>
         <header>Light On Game</header>
-        <div class="lampa"></div>
+        
 
         <article>
-            <div class="jatekter"></div>
+            <div id="jatekter"></div>
             <button id="gomb">Új játék</button>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur mollitia enim reprehenderit maxime similique natus facere! Recusandae libero voluptas ea hic accusantium! Quae laborum corporis deserunt, fugiat incidunt temporibus suscipit.</p>
         </article>
