--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <main>
-        <header>Light On Game</header>
+        <header><h1>Light On Game</h1></header>
         <div class="lampa"></div>
 
         <article>
